tests/expected/parse03e.err
parse03e.usc:12:1: error: Function implementation missing

^
1 Error(s)
